css/style3.css
* {
  box-sizing: border-box;
}

.clearfix:before, .clearfix:after {
  content: "";
  display: table;
}

.clearfix:after{
  clear: both;
}

body {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 16px;
}

img {
  display: block;
  width: 100%;
}

/*header styling*/

header {
  background-color: #09c1b3;
  border-bottom: 5px solid #440063;
  color: white;
}

.logo {
  font-family: 'Oswald', sans-serif;
  font-size: 36px;
  text-transform: uppercase;
  padding: 12.5px 0px 10px 15px;
  float: left;
}

.nav-icon {
  float: right;
  font-size: 37.5px;
  padding: 12.5px;
}

.nav-icon:hover {
  color: #440063;
  cursor: pointer;
}

.nav-header {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s;
  clear: both;
}

.nav-header ul {
  padding: 0 20px 20px;
}

.navlist-item {
  border-bottom: 2px solid white;
}

.navlist-item:first-child {
  border-top: 2px solid white;
}

.navlist-item:hover {
  background-color: #08ADA1;
}

.nav-link {
  text-decoration: none;
  color: white;
  padding: 10px;
  display: block;
}

.visible {
  max-height: 200px;
}

/*end of header styling*/

.tagline {
  padding: 10px;
}

.job-alerts-tablet {
  display: none;
}

/*job search box*/
.find-jobs {
  background: url(../images/image1.jpg) center center no-repeat;
  background-size: cover;
  padding: 30% 10%;
  color: white;
}

.searchbox {
  background-color: #440063;
  color: white;
  padding: 5%;
}

.searchbox p {
  padding: 2.5% 0;
  font-size: 18px;
}

.searchbox input {
  outline: none;
  width: 100%;
  margin: 2.5% 0;
  padding: 2.5% 0;
  font-size: 18px;
}

.search-jobs {
  font-size: 18px;
  border: none;
  padding: 4% 0;
  font-weight: bold;
  color: #440063;
  background-color: white;
  margin: 2% 0;
  display: block;
  width: 100%;
  outline: none;
}

.search-jobs:hover {
  color: white;
  background-color: #09c1b3;
}
/*end of job search section*/

/*job alerts box*/
.job-alerts {
  margin: 10px;
  padding: 10px;
  background-color: #6BD9D1;
  box-shadow: 2px 2px 0 rgba(0,0,0,0.1);
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  color: black;
  display: block;
}

.job-alerts p {
  display: inline-block;
}

.sign-up {
  padding-left: 10px;
}
/*end of job alerts box section*/

/*Why use us section*/

.benefits h2 {
    position: relative;
    text-align: center;
    font-size: 30px;
    margin: 20px 10px;
}

.benefits span {
    background: #fff;
    padding: 0 5px;
    position: relative;
}

.benefits h2:before {
 background: #08ADA1;
 content: "";
 display: block;
 height: 2px;
 position: absolute;
 top: 50%;
 width: 100%;
}

.benefits-green {
  background-color: #09c1b3;
  padding: 10%;
  text-align: center;
}

.benefits-white {
  background-color: white;
  padding: 10%;
  text-align: center;
}

.benefits-green h3, .benefits-white h3 {
  font-size: 24px;
  padding-bottom: 5%;
  margin-top: 5%;
}

.benefits-green p, .benefits-white p {
  font-size: 16px;
}

.icons-green {
   color: #09c1b3;
   font-size: 50px;
 }

.icons-white {
  color: white;
  font-size: 50px;
}

/*end of why use us section*/

/*resources section*/
.resources {
  display: block;
  padding: 5% 5% 0;
}

.resources1 {
  padding-top: 0;
}

.resources h3 {
  margin: 5% 0;
  font-size: 20px;
  font-weight: bold;
}

.resources p {
  font-size: 16px;
  margin-bottom: 5%;
}

.button-reference {
  background-color: #440063;
  text-decoration: none;
  color: white;
  padding: 3.5% 7.5%;
  border-radius: 5px;
  display: block;
  max-width: 160px;
}

.button-reference:hover {
  background-color: #09c1b3;
}

.border {
  border-bottom: 1px solid #440063;
  padding: 2.5%;
}

.resources:last-child {
  margin-bottom: 5%;
}
/*end of resources section*/

/*footer*/
footer {
  background-color: #09c1b3;
  padding: 15px 0;
  text-align: center;
  color: white;
}

footer nav {
  margin: 10px 0;
}

footer ul {
  padding: 0 5px;
}

footer nav li {
  display: inline-block;
  margin-bottom: 5px;
}

footer nav li a {
  text-decoration: none;
  color: white;
  padding: 0 5px;
}

footer nav li a:hover {
  color: #440063;
}
/*end of footer styling*/

@media (min-width: 480px) { /* mobile-landscape */
  main {
    margin: 0 auto;
  }

  .find-jobs {
    padding: 20% 15%;
  }

  .job-alerts {
    width: 300px;
    margin: 10px auto;
    padding: 10px;
  }

  .benefits-green, .benefits-white {
    padding: 5%;
  }

  .left-aligned {
    width: 48%;
    float: left;
    margin-right: 12.5px;
    vertical-align: top;
  }

  .right-aligned {
    width: 48%;
    float: right;
  }

  .resources h3 {
    margin-top: 0;
  }

  .border {
    clear: both;
  }
}

  @media (min-width: 650px) { /* tablet-portrait */
    .nav-icon {
      display: none;
    }

    .nav-header {
      max-height: none;
      float: right;
      clear: none;
      font-size: 18px;
      padding: 10px;
    }

    .nav-header ul {
      padding: 0;
    }

    .navlist-item {
      display: inline-block;
    }

    .navlist-item, .navlist-item:first-child {
      border: none;
    }

    .navlist-item:hover {
      background-color: inherit;
    }

    .nav-link:hover {
      color: #440063;
    }

    .job-alerts-tablet {
      display: inline-block;
      vertical-align: top;
    }

    .job-alerts-phone {
      display: none;
    }

    .tagline {
      display: inline-block;
      margin-right: 75px;
    }

    .job-alerts {
      width: 250px;
    }

    .find-jobs {
      padding: 10% 25%;
    }

    .benefits-green h3, .benefits-white h3 {
      margin-top: 2.5%;
      padding-bottom: 2.5%;
    }

    .benefits-green p, .benefits-white p {
      padding: 0 40px;
    }

}

